data/derived/sp14/progs/unify/prog3750.ml.out
Characters 285-290:
  (carry :: a1, ones :: res)
   ^^^^^
Error: This expression has type int list
       but an expression was expected of type int
